# FSLint

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  Doxyfile  FSLintConfig.cmake.in  LICENSE  LICENSE-fmi.txt  README.md  RULES.md  apply_fix.py  debug.cpp  diff.txt  fix_cmake.py  fix_cmake_clean.py  fix_cmake_final.py  fix_msgs_v2.py  pyproject.toml  test_charconv.cpp  test_chrono  test_chrono.cpp  test_chrono_clang  test_quotes.txt
.github/workflows/: build.yml  deploy-web.yml
cli/: main.cpp
core/: certificate.cpp  certificate.h  file_utils.cpp  file_utils.h  format_shim.h  iso8601.h  model_checker.cpp  model_checker.h  model_info.h  xml_utils.cpp  xml_utils.h  zipper.cpp  zipper.h
core/checker/: checker.h  checker_factory.cpp  checker_factory.h
core/checker/archive/: archive_checker.cpp  archive_checker.h
core/checker/binary/: binary_checker.cpp  binary_checker.h  binary_parser.cpp  binary_parser.h  fmi1_binary_checker.cpp  fmi1_binary_checker.h  fmi2_binary_checker.cpp  fmi2_binary_checker.h  fmi3_binary_checker.cpp  fmi3_binary_checker.h
core/checker/build_description/: build_description_checker.cpp  build_description_checker.h  fmi2_build_description_checker.cpp  fmi2_build_description_checker.h  fmi3_build_description_checker.cpp  fmi3_build_description_checker.h
core/checker/directory/: directory_checker.cpp  directory_checker.h  fmi1_directory_checker.cpp  fmi1_directory_checker.h  fmi2_directory_checker.cpp  fmi2_directory_checker.h  fmi3_directory_checker.cpp  fmi3_directory_checker.h  ssp_directory_checker.h
core/checker/model_description/: fmi1_model_description_checker.cpp  fmi1_model_description_checker.h  fmi2_model_description_checker.cpp  fmi2_model_description_checker.h  fmi3_model_description_checker.cpp  fmi3_model_description_checker.h  model_description_checker.cpp  model_description_checker.h  structured_name_parser.h
core/checker/resources/: resources_checker.cpp  resources_checker.h
core/checker/schema/: fmi1_schema_checker.cpp  fmi1_schema_checker.h  fmi2_schema_checker.cpp  fmi2_schema_checker.h  fmi3_schema_checker.cpp  fmi3_schema_checker.h  schema_checker.cpp  schema_checker.h  ssp1_schema_checker.cpp  ssp1_schema_checker.h  ssp2_schema_checker.cpp  ssp2_schema_checker.h
core/checker/ssp/: ssp_description_checker.cpp  ssp_description_checker.h  ssp_directory_checker.cpp
core/checker/terminals_and_icons/: fmi2_terminals_and_icons_checker.cpp  fmi2_terminals_and_icons_checker.h  fmi3_terminals_and_icons_checker.cpp  fmi3_terminals_and_icons_checker.h  terminals_and_icons_checker.cpp  terminals_and_icons_checker.h
lib/: certificate.cpp  certificate.h  model_checker.cpp  model_checker.h  model_info.h  zipper.cpp  zipper.h
lib/checker/: checker.h  checker_factory.cpp  checker_factory.h  fmi_version_utils.h
lib/checker/archive/: archive_checker.cpp  archive_checker.h
lib/checker/binary/: binary_checker.cpp  binary_checker.h  binary_checker_base.cpp  binary_checker_base.h  binary_parser.cpp  fmi1_binary_checker.cpp  fmi1_binary_checker.h  fmi2_binary_checker.cpp  fmi2_binary_checker.h  fmi3_binary_checker.cpp  fmi3_binary_checker.h
lib/checker/build_description/: build_description_checker.cpp  build_description_checker.h  fmi2_build_description_checker.cpp  fmi2_build_description_checker.h  fmi3_build_description_checker.cpp  fmi3_build_description_checker.h
lib/checker/directory/: directory_checker.cpp  directory_checker.h  directory_checker_base.cpp  directory_checker_base.h  fmi1_directory_checker.cpp  fmi1_directory_checker.h  fmi2_directory_checker.cpp  fmi2_directory_checker.h  fmi3_directory_checker.cpp  fmi3_directory_checker.h  resources_checker.cpp
lib/checker/model_description/: fmi1_model_description_checker.cpp  fmi1_model_description_checker.h  fmi2_model_description_checker.cpp  fmi2_model_description_checker.h  fmi2_terminals_and_icons_checker.cpp  fmi2_terminals_and_icons_checker.h  fmi3_model_description_checker.cpp  fmi3_model_description_checker.h  fmi3_terminals_and_icons_checker.cpp  model_description_checker.cpp  model_description_checker.h  structured_name_parser.h  terminals_and_icons_checker.h  (+1 more)
python/: bindings.cpp
scripts/: agent_verify.py  build_web.py  build_web.sh  check_encodings.py  download_reference_fmus.py  download_reference_fmus.sh  format_xml.py  generate_launch.py  get_version.py  update_launch.py
src/: binary_parser.rs  iso8601.rs  lib.rs  main.rs
src/archive/: mod.rs
src/certificate/: mod.rs
src/checker/: mod.rs  xml_checker.rs
src/file_utils/: mod.rs
src/model_checker/: mod.rs
standard/fmi/: LICENSE.txt
standard/ssp/: LICENSE.txt
test_exclude/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
test_exclude/child/: CMakeLists.txt  cmake_install.cmake
test_install/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
test_proj/: CMakeLists.txt
tests/: archive_encoding_tests.cpp  archive_security_tests.cpp  binary_checker_tests.cpp  certificate_management_tests.cpp  certificate_tests.cpp  continuation_tests.cpp  detection_tests.cpp  directory_checker_tests.cpp  fmi1_checker_tests.cpp  fmu_structure_tests.cpp  model_description_tests.cpp  recursive_checker_tests.cpp  repro_issue.cpp  schema_checker_tests.cpp  simple.fmu  ssp_structure_tests.cpp  terminals_and_icons_tests.cpp  test_helpers.h  tidy_test.cpp  utf8_tests.cpp
tests/core/: test_certificate.cpp  test_certificate_management.cpp
tests/fmi/: test_binary_checker.cpp  test_fmi1_model_description.cpp  test_fmi2_model_description.cpp  test_fmi3_model_description.cpp  test_fmu_structure.cpp  test_terminals_and_icons.cpp
tests/fmi201/: modelDescription.xml
tests/python/: test_bindings.py
tests/repro_fmi2/: modelDescription.xml
tests/tmp_fmi1_extract/: modelDescription.xml
tests/tmp_fmi1_extract_me/: modelDescription.xml
wasm/: wasm_interface.cpp
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/public/: sw.js
web/src/: App.tsx  languages.d.ts  main.tsx
(+704 files in other folders)
